fix(game/PlayerList): Adjust width without overflowing player name

--- a/src/views/_root_/_rooms_/game/styles/OngoingGame.module.css
+++ b/src/views/_root_/_rooms_/game/styles/OngoingGame.module.css
@@ -3,7 +3,7 @@
   grid-template-areas:
     ". players table ."
     ". players myhand .";
-  grid-template-columns: auto minmax(80px, 320px) minmax(800px, 1240px) auto;
+  grid-template-columns: auto minmax(min-content, 320px) minmax(800px, 1240px) auto;
   grid-template-rows: max-content auto;
   gap: 20px;
   height: 100vh;
